--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "json-server": "json-server --watch db.json --port 3001"
+    "json-server": "json-server --watch db.json"
   },
   "dependencies": {
     "axios": "^1.3.5",
